# BenchmarkMyAI

./: .gitignore  LICENSE  Makefile  README.md  Tests.ipynb  credentials.json  main.py  requirements.txt  requirments_list.txt  runall.py  setup.cfg  test.py
notebooks/: System Information.ipynb  WandB Work.ipynb
package/: requirements.txt  requirments.txt
package/models/: __init__.py  efficientdet.py  efficientdetD0.py  kerasModels.py  spineNet.py
package/utils/: __init__.py  benchmark.py  wandb.py
rbm/: __init__.py  make  requirements.txt
rbm/backends/: __init__.py  nlp.py  tensorflow_backend.py  torch_backend.py  vision.py
rbm/models/: __init__.py  efficientdet.py  hugging_face.py  inception_unet.py  keras_models.py  nerda.py  plugins.py  spinenet_backbone.py
rbm/models/cv/classification/: keras_models.py
rbm/models/cv/object-detection/: efficientdet.py  spinenet_backbone.py
rbm/models/cv/segmentation/: inception_unet.py
rbm/models/nlp/: hugging_face.py
rbm/models/nlp/classification/: hugging_face.py
rbm/models/nlp/ner/: nerda.py
rbm/models/nlp/qa/: hugging_face.py
rbm/utils/: __init__.py  benchmark.py  info.py  plugins.py  wandb.py
tests/: tensorflow-gpu.py
