[metadata]
name = rbm
version = 0.0.1
author = RevovleAI
author_email = author@example.com
description = A simple deep learning model inference benchmark utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .

packages = find:
python_requires = >=3.6
install_requires =
    lxml
    absl-py
    matplotlib
    numpy
    Pillow
    PyYAML
    six
    tensorflow
    tensorflow-addons
    tensorflow-hub
    neural-structured-learning
    tensorflow-model-optimization
    Cython>=0.29.13
    tensorflow-datasets
    gin-config
    pycocotools
    py-cpuinfo
    gputil
    opencv-python
    wandb
    wget
    torch
    transformers
    sentencepiece
    NERDA
    nltk

[options.packages.find]
where = .
